--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "gulp": "^4.0.2",
     "vue": "^3.2.13",
