--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "gulp": "^4.0.2",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
@@ -27,7 +29,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
-    "sass": "^1.56.1"
+    "sass": "^1.56.2"
   },
   "eslintConfig": {
     "root": true,
